objects/LLC_BI__Product_Package__c.object
<CustomObject>
    <description>The Product Package Object allows the user to group relationships and loans in a singular view to work complex credit packages and exposure purposes</description>
    <fields>
        <fullName>Actions_Under_Consideration_Narrative__c</fullName>
        <label>Actions Under Consideration Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Narrative__c</fullName>
        <label>Approval Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CSA_Queue__c</fullName>
        <description>This Field is used to define the available queue and current queue used in Claim System.</description>
        <label>Queue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Collateral_Analysis_Narrative__c</fullName>
        <description>Collateral Summary for Credit Memo.</description>
        <label>Collateral Analysis Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Executive_Summary_Narrative__c</fullName>
        <description>An executive summary for Credit Memo.</description>
        <label>Executive Summary Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Guarantor_Analysis_Narrative__c</fullName>
        <label>Guarantor Analysis Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account field is a lookup to the Account/ Relationship object in nCino and used to specify the main account the product package is associated with. The relationship is required to create a new loan facility from the product package page.</description>
        <label>Relationship</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Packages</relationshipLabel>
        <relationshipName>Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Approval_Status__c</fullName>
        <description>The approval status field is used to specify where the Product Package is in an approval process. This field is used in conjunction with reverse propagation functionality to alert the user when all loans have met their approvals and the product package is ready to move forward in its approval path. This field should not be used when the propagate down approval process functionality is implemented.</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Booked Affiliated Exposure to this Product Package.</description>
        <label>Booked Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Booked Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Booked Direct Exposure to the Product Package.</inlineHelpText>
        <label>Booked Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Booked_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Booked Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Booked Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Booked Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Committed Affiliated Exposure to this Product Package.</description>
        <label>Committed Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Committed Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Committed Direct Exposure to the Product Package.</inlineHelpText>
        <label>Committed Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Committed_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Committed Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Committed Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Committed Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Credit_Memo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Credit Memo field is a look up to the credit memo record associated to the Product Package. This will automatically populate when a credit memo is generated for the Product Package. This will link the user from the Product Package directly to the credit memo associated with it.</description>
        <label>Credit Memo</label>
        <referenceTo>LLC_BI__Credit_Memo__c</referenceTo>
        <relationshipLabel>Product Packages</relationshipLabel>
        <relationshipName>Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Default_App__c</fullName>
        <defaultValue>&apos;pp-details.dashboard-pp-sn-details&apos;</defaultValue>
        <description>This field is used to determine the default landing page for this product package within the nCino User Interface.</description>
        <inlineHelpText>This field is used to determine the default landing page for this product package within the nCino User Interface.</inlineHelpText>
        <label>Default App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>The Description field is an optional, free form, long text area that can be used to input details or additional information about the Product Package.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_Leases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional checkbox field is an automatic flag to denote whether any of the underlying facilities are lease products.</description>
        <label>Has Leases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_Syndicated_Loans__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional field is an automatic flag to denote whether any of the underlying facilities have been marked as &quot;Is Syndication&quot; loans.</description>
        <label>Has Syndicated Loans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Exposure_Calc_Date__c</fullName>
        <description>This date/time field automatically populates via the system. This field specifies the most recent date and time for a given exposure calculation. Default is null.</description>
        <label>Last Exposure Calculation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Review_Date__c</fullName>
        <description>This field is an optional date field. Only used if the customer will be initiating Reviews from the Product Package level. This field is used to show the date of the last review completed on the Product Package and its loans and relationships associated to those loans.</description>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Facilities_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is automatically populated and used to store the number of top level loan facilities in the product package. The count of loan facilities will NOT include those loans that have been superseded, declined or withdrawn.</description>
        <label>Number of Loan Facilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Money__c</fullName>
        <description>This field is an optional currency field.  This is a manually entered field that is used to track the amount of new money being introduced to the Product Package.</description>
        <label>New Money</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Annual_Review__c</fullName>
        <description>--DEPRECATED-- This field will be deprecated, as its functionality is now handled by the more generic &quot;next review date&quot; field.</description>
        <label>-D Next Annual Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Review_Date__c</fullName>
        <description>This field is an optional date field. Only used if the customer will be initiating Reviews from the product package level. This date field is used to specify the date of the next review for the Product Package. This date will automatically populate, based off of review frequency, once the initial review date is set manually, and a review has been completed (to populate the last review date field) .</description>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Outstanding__c</fullName>
        <description>This currency field is an option and manually entered field. It is used to show the amount of money&quot; in use&quot;  for the Product Package. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is an optional and manually set field. This field is a lookup to nCino users, and specifies which user is the primary officer for the Product Package</description>
        <label>Primary Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Propagate_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to execute the ActionPropagation trigger. This trigger is used to propagate approval actions to loans that are associated to the product package.</description>
        <label>Propagate Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Affiliated Exposure to this Product Package.</description>
        <label>Proposed Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Proposed Direct Exposure to the Product Package.</inlineHelpText>
        <label>Proposed Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Proposed Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Proposed Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Review_Frequency__c</fullName>
        <description>This field is an optional and manually set field. It is only used if the customer will be initiating Reviews from the product package level. This field is used to indicate how often the product package review is required.</description>
        <label>Review Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Every 2 Months</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Reviewable_Loan_Facilities_Count__c</fullName>
        <description>This field is automatically populated based on the loans that have the &quot;is Review Ready&quot; checkbox, checked on the loan wall.  This field is used to show the number of main loan facilities ready to review. And can be utilized for entry criteria for the approval processes to ensure only loans ready to be submitted for approval are.</description>
        <label>Number of Reviewable Loan Facilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Rating__c</fullName>
        <description>This field is an optional and manually entered field. This picklist is used to specify the risk rating for the Product Package.</description>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Secondary_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is an optional and manually set field. This field is a lookup to nCino users, and specifies which user is the secondary officer for the Product Package</description>
        <label>Secondary Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages_Secondary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <description>This field specifies the current product package approval stage. If provided, this value should match one of the Stage pick list values configured for this financial institution. Optional and manually populated.</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Entry</fullName>
                    <default>true</default>
                    <label>Order Entry</label>
                </value>
                <value>
                    <fullName>Setup</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is optional and manually set (or set through workflow configuration). This field is used to specify the Status of the product package. Generally used in the approval process configuration.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Intermediately Approved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Intermediately Rejected</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Approval Step 1</fullName>
                </value>
                <value>
                    <fullName>Approval Step 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__TBE__c</fullName>
        <description>This field is optional and manually set. This currency field is used to capture the Total Exposure (Borrowers) for the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>TBE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TCE__c</fullName>
        <description>This field is optional and manually set. This currency field is used to capture total exposure (Credit) for the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>TCE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TOE__c</fullName>
        <description>This field is optional and manually set. This currency field is used to capture total exposure (Obligor) for the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>TOE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Total Affiliated Exposure to this Product Package.</description>
        <label>Total Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Allocated_Syndication_Amount__c</fullName>
        <description>This optional field is an automatic roll-up of the total allocation amounts of any loans flagged as syndications that are associated with the product package.</description>
        <label>Total Allocated Syndication Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Total Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Total Direct Exposure to the Product Package.</inlineHelpText>
        <label>Total Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Total Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Total Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Total Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Loan_Facilities_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is automatically calculated. This field calculates and shows the total amount of all the main level facility &quot;original amount&quot; in the product package. This field will NOT include those loans that have been superseded, declined or withdrawn.</description>
        <label>Total Loan Facilities Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Loan_Facilities_Exposure__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is optional and manually set. This field is used to specify the amount on exposure for all the main facility loans in the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>Total Loan Facilities Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Net_New_Funds__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Total Net New Funds to this Product Package.</description>
        <label>Total Net New Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Syndicated_Facility_Amount__c</fullName>
        <description>This optional field is an automatic roll-up of the total facility amounts of any loans flagged as syndications that are associated with the product package.</description>
        <label>Total Syndicated Facility Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unused__c</fullName>
        <description>This currency field is optional and manually entered field. This field is used to specify the available amount or (unused) amount in all the main facility loans in the product package. This field can also be configured to be populated with field mapping from the customers core</description>
        <label>Unused</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is used as an external, unique key for the Product Package ID record. This value is not generally made visible to the user as it is usually used behind the scenes in data mapping exercises.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Overview_Narrative__c</fullName>
        <description>Rich text field to give an overview of the credit memo.</description>
        <label>Overview Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Risk_and_Mitigants_Narrative__c</fullName>
        <label>Risk and Mitigants Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Subject_Request_Narrative__c</fullName>
        <label>Subject Request Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Summary_and_Recommendation_Narrative__c</fullName>
        <label>Summary and Recommendation Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Use_of_Proceeds_Narrative__c</fullName>
        <label>Use of Proceeds Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>X1st_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>1st Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_1st_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X2nd_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>2nd Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_2nd_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Package</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Primary_Officer__c</columns>
        <columns>LLC_BI__Secondary_Officer__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All1</fullName>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Package Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>